Sri: fix the alignments

--- a/src/app/@views/patient-management/patienthistory/patienthistory.component.css
+++ b/src/app/@views/patient-management/patienthistory/patienthistory.component.css
@@ -42,8 +42,10 @@ button
     background-color:#5a4989;
     color: white;
     margin-top: 50px;
-    align-self: center;
-    margin-left: 650px;
+    margin-right: 50px;
+    width: 200px;
+    height: 50px;
+    font-size: 17px;
 }
 .purpleColor
 {
@@ -91,4 +93,17 @@ padding-right: 20px;
     overflow-y: auto;
     height:950px; 
     width: 100%;   
+}
+.nextbutton
+{
+    float: right;
+}
+.margintop20
+{
+    margin-top: 20px;
+}
+
+.marginbottom20
+{
+    margin-bottom: 20px;
 }
