--- a/src/app/@views/patient-management/vitals/vitals.component.css
+++ b/src/app/@views/patient-management/vitals/vitals.component.css
@@ -41,9 +41,9 @@ button
 {
     background-color:#5a4989;
     color: white;
-    margin-top: 50px;
-    align-self: center;
-    margin-left: 650px;
+    width: 200px;
+    height: 50px;
+    font-size: 17px;
 }
 .purpleColor
 {
@@ -82,6 +82,7 @@ padding-right: 20px;
 .bodycontainer
 {
     margin-top: 30px;
+    width: 100%;    
 }
 .bodycontainer table tr td{
     padding-right: 10px;
@@ -103,4 +104,26 @@ tr
     overflow-y: auto;
     height:950px; 
     width: 100%;   
+}
+.nextbutton
+{
+    float: right;
+    margin-top: 50px;
+    margin-right: 50px;
+
+}
+.bordertable
+{
+    border: 1px solid #5a4989;
+    text-align: left;
+}
+.marginTop30
+{
+    margin-top: 30px;
+}
+.marginBottom30{
+    margin-bottom: 30px;
+}
+.marginLeft30{
+    margin-left: 30px;
 }
